# meson-cpp-template

./: meson.build
include/counting/: counting.h
src/: counting.cpp  meson.build
tests/: meson.build  tests.cpp
